--- a/assets/css/pokedex.css
+++ b/assets/css/pokedex.css
@@ -121,7 +121,15 @@
     filter: brightness(1.1);
     text-align: center;
 }
-
+.weight {
+    color: #fff;
+    padding: .25rem .5rem;
+    margin: .25rem 0;
+    font-size: .625rem;
+    border-radius: 1rem;
+    text-align: center;
+    background: rgba(69, 71, 69, 0.3);
+}
 .pokemon .detail img {
     max-width: 100%;
     height: 70px;
